--- a/style.css
+++ b/style.css
@@ -1,46 +1,46 @@
 @font-face {
     font-family: 'Montserrat';
-    src: url('../fonts/MontserratRegular.woff2') format('woff2'),
-    url('../fonts/MontserratRegular.woff') format('woff');
+    src: url('fonts/MontserratRegular.woff2') format('woff2'),
+    url('fonts/MontserratRegular.woff') format('woff');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Montserrat';
-    src: url('../fonts/MontserratMedium.woff2') format('woff2'),
-    url('../fonts/MontserratMedium.woff') format('woff');
+    src: url('fonts/MontserratMedium.woff2') format('woff2'),
+    url('fonts/MontserratMedium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Montserrat';
-    src: url('../fonts/MontserratBold.woff2') format('woff2'),
-    url('../fonts/MontserratBold.woff') format('woff');
+    src: url('fonts/MontserratBold.woff2') format('woff2'),
+    url('fonts/MontserratBold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Montserrat';
-    src: url('../fonts/MontserratExtraBold.woff2') format('woff2'),
-    url('../fonts/MontserratExtraBold.woff') format('woff');
+    src: url('fonts/MontserratExtraBold.woff2') format('woff2'),
+    url('fonts/MontserratExtraBold.woff') format('woff');
     font-weight: 800;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Fredericka the Great';
-    src: url('../fonts/FrederickathegreatRegular.woff2') format('woff2'),
-    url('../fonts/FrederickathegreatRegular.woff') format('woff');
+    src: url('fonts/FrederickathegreatRegular.woff2') format('woff2'),
+    url('fonts/FrederickathegreatRegular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Gabelisa';
-    src: url('../fonts/Gabelisa.woff') format('woff');
+    src: url('fonts/Gabelisa.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
